Bug 567360: Don't call UpdateExpirationTime if mRequestTime isn't set r=bzbarsky